--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pyaudio==0.2.13
 amazon-transcribe==0.6.2
 sounddevice==0.4.6
 numpy==1.26.0
-pyannote.audio==2.1.1
+# pyannote.audio==2.1.1
+cohere==4.27
+python-dotenv==1.0.0
