--- a/web-app/next-openai-app/package.json
+++ b/web-app/next-openai-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ai": "2.2.13",
+    "dotenv": "^16.3.1",
     "next": "13.4.12",
     "openai": "4.2.0",
     "react": "18.2.0",
